--- a/regex1.ipynb
+++ b/regex1.ipynb
@@ -198,7 +198,11 @@
     }
    ],
    "source": [
-    "print_match(\"[0-9]\",txt2)"
+    "print_match(\"[0-9]\",txt2)\n",
+    "# ! warning on this\n",
+    "# TODO sth that i have to do\n",
+    "# ? I have a question\n",
+    "# * Very important"
    ]
   }
  ],
